--- a/src/index.css
+++ b/src/index.css
@@ -123,7 +123,7 @@
   }
   body {
     @apply bg-background text-foreground;
-    font-family: "Geist", ui-sans-serif, system-ui, sans-serif;
+    font-family: "Raleway", ui-sans-serif, system-ui, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
